--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
           <div className="container mx-auto px-4 py-16 flex flex-col items-center justify-center min-h-screen">
             <header className="text-center mb-12" ref={titleRef}>
               <h1 className="text-6xl md:text-8xl font-extrabold text-white drop-shadow-lg glow-text">
-                Happy Birthday!
+                Happy Birthday! Shamim
               </h1>
               <p className="text-2xl md:text-4xl text-white mt-8 font-serif italic">
                 To My Amazing Friend
